# BenchmarkingSuite

./: Benchmarks.md  CMakeLists.txt  CMakePresets.json  DiscordData-Prettified.json  DisordData-Prettified.json  FrozenMapTest.csv  FrozenMapTest.json  GenerateGraphs.py  twitterdata-minified-converted.json  twitterdata-prettified02.json  twitterdata-prettified04.json  twitterdata-serialized-second.json  twitterdata-serialized.json
.github/workflows/: CLANG-MacOS.yml  GCC-Ubuntu.yml
BenchmarkSuite/: CMakeLists.txt
BenchmarkSuite/Include/: BenchmarkSuite.hpp
CMake/: main.cpp
StringComparison/: CMakeLists.txt  main.cpp
StringComparison/CMake/: BuildFeatureTester.sh
StringComparison/jsonifier/: Allocator.hpp  Base.hpp  Compare.hpp  Config.hpp  DToStr.hpp  Derailleur.hpp  Error.hpp  Hash.hpp  HashMap.hpp  HashSet.hpp  ISADetection.hpp  IToStr.hpp  Index.hpp  JsonStructuralIterator.hpp  JsonifierCore.hpp  Minifier.hpp  Minify_Impl.hpp  NumberUtils.hpp  Parse_Impl.hpp  Parser.hpp  Prettifier.hpp  Prettify_Impl.hpp  RawJsonData.hpp  Reflection.hpp  Serialize_Impl.hpp  Serializer.hpp  Simd.hpp  StaticVector.hpp  StrToD.hpp  StrToI.hpp  String.hpp  StringUtils.hpp  StringView.hpp  Tuple.hpp  Validate_Impl.hpp  Validator.hpp  Vector.hpp  Write.hpp
StringComparison/jsonifier/ISA/: AVX.hpp  AVX2.hpp  AVX512.hpp  Bmi.hpp  Bmi2.hpp  CollectIndices.hpp  CompareValues.hpp  Fallback.hpp  GatherValues.hpp  Lzcount.hpp  Neon.hpp  Popcount.hpp  ShuffleValues.hpp  SimdCommon.hpp
xxHash/: xxhash.h
